// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelHeader should render the component with children 1`] = `
<DocumentFragment>
  <div>
    <div>
      Foo
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelHeader should render the component with className from inherited props 1`] = `
<DocumentFragment>
  <div
    class="dummy-class"
  >
    Name
  </div>
</DocumentFragment>
`;

exports[`ModelHeader should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelHeader should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelHeader should render with global override shorthand for model and attribute 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
